css/style.css
/* ... */
.project-title a, h3 {
  margin-top: 0px;
  font-family: "DegularDisplay-Black", sans-serif;
  letter-spacing: 1.5px;
  margin-bottom: 0px;
  font-weight: 700;
  padding-bottom: 10px;
  font-size: 32px !important;
  line-height: 48px;
}
.border {
  border:  1px solid #30363D;
}
.border-b {
  border-color: #30363D !important;
}
.border-none {
	border: none !important;
}

/*homepage */
.hero {
  padding-left: 10px;
  padding-right: 10px;
  margin-top: 125px;
  margin-bottom: 53px;
}
.hero em {
  border-bottom: #2f81f7 solid 0.2rem;
  font-style: normal;
}
.hero i {
  opacity: .6;
  font-size: 12px;
}
.hero img {
  width: 155px;
  height: 155px;
  border-radius: 3px;
  float: right;
  border: 1px solid #30363D;
  top: 0;
}
.hero .twitter {
  padding: 0rem 0.6rem;
  color: #2f81f7;
  text-transform: uppercase;
  letter-spacing: .2px;
  background: rgba(40, 40, 40, 0.15);
  border-radius: 3px;
  -webkit-transition: all 0.3s ease;
  font-family: "VulfMono-Regular", sans-serif;
  border: 1px solid #30363D;
  font-weight: 400;
  transition: all 0.3s ease;
}
.hero .twitter:hover, .twitter:visited {
  -webkit-transition: all 0.3s ease;
  color: #2f81f7;
  background: #202733;
  border: 1px solid #30363D;
  transition: all 0.3s ease;
  text-decoration: none;
}
.hero a { 
font-style: italic;
border-bottom: 1px dotted #2f81f7;
}
.move {
  margin-left: 3px;
}
.hero h1 {
  font-size: 57px;
  color: #161813;
  color: #f8fafc;
  letter-spacing: 3.25px;
  line-height: 1.3;
  margin-bottom: 39px;
}
.hero p {
  color: #161813;
  color: #d5e1eb;
  margin-top: 20px;
  line-height: 28px;
  font-size: 16px;
}
.twitter {
  padding: 2px 4px 1px 4px !important;
  vertical-align: middle;
}
.home-project-title {
  color: #222;
  color: #d5e1eb;
  font-size: 48px;
  line-height: 56px;
  border-bottom: 1px dotted #30363D;
  margin-right: 40px;
    
}
.description {
  color: #a7acb3;
  font-family: 'Space Grotesk', sans-serif;
}
.home-preview-description {
  max-width: 410px;
  margin-top: 15px;
}
#current-projects img {
  border: 1px solid #30363D;
}
#current-projects .home-teaser-list {
  border-top: 1px dotted #30363D;
  padding-top: 70px;
}
#current-projects .hero-image-home-link-block {
  max-width: 450px;
  margin-left: 40px;
}
#current-projects p {
  margin-top: 25px;
  line-height: 23px;
  font-size: 16px !important;
}
#automatons, #drips {
  border-radius: 2px;
  opacity: 1;
}
.swiper-container {
  background: transparent;
  max-width: 453px;
  overflow: hidden;
}
#project-2nd .home-teaser-list {
  margin-top: 30px;
  border-top: none;
  border-bottom: 1px dotted #30363D;
  padding-bottom: 95px;
}
#project-2nd img {
  border-radius: 2px;
}
footer {
  margin-top: 150px;
  margin-bottom: 40px;
}
footer a {
  color: #2f81f7;
}
footer a:hover {
  border-color: #2f81f7;
}
footer h3 {
  color: #d5e1eb;
  font-family: "DegularDisplay-Black", sans-serif;
}
.name h1 {
  max-width: 300px !important;
}
.intro img {
  float: right !important;
  margin-right: 10px;
}

/*responsive design*/
@media (min-width: 769px) and (max-width: 1023px) {
  .smoke-container {
    left: 5.25vw;
    top: 5vw;
  }
}
.intro h1, .intro img {
  float: left;
}
footer a {
  border-bottom: 1px dotted #30363D;
  margin-left: 12px;
}
@media (max-width: 768px) {
  .hero {
    margin-top: 80px;
  }
  .hero h1 {
    font-size: 39px;
  }
  .hero img {
    width: 108px;
    height: 108px;
  }
  #project-2nd .swiper-container {
    background: #95E9EF;
    background: #21262D;
 }
 #current-projects .home-teaser-list {
  padding-top: 0px;
 }
 .home-project-title {
  margin-right: 0;
  margin-top: 40px;
 }
 #current-projects .hero-image-home-link-block {
  margin-left: 0;
 }
 #current-projects .hero-image-home-link-block {
  margin-top: 30px;
 }
 footer {
  margin-top: 70px;
  margin-bottom: 20px;
 }
 .mt-10-sm {
  margin-top: 50px;
 }
 .hero p {
  font-size: 15px;
}
.twitter {
  color: #2f81f7;
}
.smoke-container {
  top: 15px;
  left: 40px;
}
.whirl {
  left: calc(50% + 18px);
}
.giant-smoke {
  animation-duration: 10s;
  animation-delay: 7s;
  bottom: -22px;
  left: 85%
}
#blunt-tip {
  position: absolute;
  bottom: -3px; 
  left: 26px; 
}
#ash {
  left: 26px;
}
}

@media (max-width: 575px) {
  .smoke-container {
    top: 7vw;
    left: 5.25vw;
    width: 10px;
    height: 10px;
  }
}

@media (max-width: 575px) {
  .smoke-container {
    top: 16vw;
    left: .5vw;
    width: 10px;
    height: 10px;
  }
  .whirl {
    background: rgba(105, 105, 105, 0.6);
  }
  
  .whirl8, .whirl9, .whirl10 {
    width: 2px;
    height: 15px;
  }
}

@media (max-width: 428px) {
  .smoke-container {
    top: 18.5vw;
    left: 1vw;
    width: 10px;
    height: 10px;
  }
}

@media (min-width: 429px) and (max-width: 767px) {
  #blunt-tip {
    position: absolute;
    bottom: -13px; 
    left: 26px; 
  }
}

@media (min-width: 768px) {
  #current-projects p {
  margin-top: 25px;
  line-height: 23px;
  font-size: 14px;
  max-width: 425px;
 }
}

